refactor(customer): Create menu count custom exception